logo added to all pages, alignment fixed with grid for container

--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,56 @@
 /* Master Styles */
 body {
     margin: 0px;
-
 }
 
 .title {
     display: flex;
     justify-content: center;
+    height: 150px;
 }
 
 .brand {
     font-size: 50px;
+    height: 50px;
 }
 
-IMG.logo {
+.logo-wrapper {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 100px;
+    height: 100px;
+}
+
+.logo {
+    position: absolute;
+    margin-top: 50px;
+    height: 100px;
+    width: 100px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: content-box;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 150px 40px 1fr;
 }
 
 /* Nav Styles */
 .nav-wrapper {
     display: flex;
     justify-content: center;
-    padding: 30px;
 }
 
 .nav-wrapper > div {
     margin-right: 20px;
     margin-left: 20px;
-    font-size: 0.9em;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 16px;
 }
 
 .nav-link-wrapper {
@@ -62,6 +78,7 @@ IMG.logo {
 .portfolio-items-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
 }
 
 .portfolio-item-wrapper {
@@ -76,7 +93,6 @@ IMG.logo {
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 1%;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
